# DNN-by-C

./: CMakeLists.txt  README.md  hi.cc  input.txt  make.bat  testcuda.cu
src/: CMakeLists.txt  FMNIST.cc  FMNIST.h  layer.h  loss.cc  loss.h  matrix.cc  matrix.h  matrix_math.cc  matrix_math.h  model.cc  model.h  optimizer.h
src/layer/: ReLU.cc  ReLU.h  avgPooling.cc  avgPooling.h  convolution.cc  convolution.h  fullyconnected.cc  fullyconnected.h  maxPooling.cc  maxPooling.h  sigmoid.cc  sigmoid.h  softmax.cc  softmax.h
src/layer_cuda/: CNN_v1.cu  CNN_v1.h  CNN_v2.cu  CNN_v2.h  CNN_v3.cu  CNN_v3.h  matrix.cu
src/optimizer/: sgd.cc  sgd.h
